chore: Update workflow to disable push trigger for Azure Container Registry build and push chore: Add content handling guideline to Customer Loyalty Agent prompt file

--- a/.github/workflows/acr-build-push.yml
+++ b/.github/workflows/acr-build-push.yml
@@ -1,8 +1,9 @@
 name: Build and push image to Azure Container Registry
 
-on:
-  push:
-    branches: [ "main" ]
+on: []
+#on:
+#  push:
+#    branches: [ "main" ]
 
 permissions:
   contents: read
